tests/ui/extern/issue-80074.stderr
error[E0469]: imported macro not found
  --> $DIR/issue-80074.rs:8:13
   |
LL | #[macro_use(m)]
   |             ^

error: cannot find macro `m` in this scope
  --> $DIR/issue-80074.rs:17:5
   |
LL |     m!();
   |     ^

error: cannot find macro `bar` in this scope
  --> $DIR/issue-80074.rs:15:5
   |
LL |     bar!();
   |     ^^^

error: cannot find macro `foo` in this scope
  --> $DIR/issue-80074.rs:13:5
   |
LL |     foo!();
   |     ^^^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0469`.
